fix styling issues on small devices

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -50,20 +50,19 @@ body {
     }
 
     div {
-      font-size: 1.5rem;
+      font-size: 12px;
       position: relative;
       text-align: center;
       top: 50%;
       transform: translateY(-50%);
-      vertical-align: middle;
-      word-break: break-word;
+      word-break: break-all;
 
-      @media(min-width: 426px) {
-        font-size: 1.25rem;
+      @media screen and (min-width: 40em) {
+        font-size: 14px;
       }
 
-      @media(min-width: 769px) {
-        font-size: 1rem;
+      @media screen and (min-width: 64em) {
+        font-size: 16px;
       }
     }
 
